# Airda

./: .gitignore  Cargo.toml  README-zh.md  README.md  config.yaml
adb-rs/: Cargo.toml
adb-rs/src/: client.rs  errors.rs  lib.rs
adb-rs/src/adb/: base_type.rs  mod.rs  server.rs
adb-rs/src/protocol/: message.rs  mod.rs
adb-rs/src/result/: check_result.rs  mod.rs
adb-rs/src/tests/: client.rs
docs/adb/: OVERVIEW.txt  PROTOCOL.txt  SERBVICE.txt  SYNC.txt
src/: lib.rs  main.rs  utils.rs
src/config/: runner.rs
src/controller/: api.rs  defines.rs  mod.rs
src/errors/: error.rs  resource.rs
src/execution/: launcher.rs  mod.rs  python.rs  task.rs  task_env.rs
src/job/: mod.rs  testing.rs
src/resource/: fs.rs  mod.rs  resource.rs  testing.rs
src/resource/phone/: adb.rs  mod.rs  phone.rs
