[package]
name = "Runner"
version = "0.1.0"
authors = ["venmosnake <VenmoSnake@yeah.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.8"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
log4rs="1.0.0"
log="0.4.14"
nix="0.20.0"
actix="0.11.0-beta.3"
actix-web="4.0.0-beta.3"
serde="1.0.124"
serde_json="1.0.64"
toml="0.5.8"
yaml-rust="0.4.5"
lazy_static="1.4.0"
pyo3="0.13.2"