[package]
name = "adb-rs"
version = "0.1.0"
authors = ["venmosnake <VenmoSnake@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.8"
tokio-util = "0.6.6"
bytes = "1.0.1"


[features]
default=["server"]
server = []
usb = []
